add add observedGeneration field in status of Application to perceive the version difference between status and spec

--- a/charts/vela-core/crds/core.oam.dev_initializers.yaml
+++ b/charts/vela-core/crds/core.oam.dev_initializers.yaml
@@ -414,6 +414,10 @@ spec:
                         - name
                         - revision
                         type: object
+                      observedGeneration:
+                        description: The generation observed by the application controller.
+                        format: int64
+                        type: integer
                       resourceTracker:
                         description: ResourceTracker record the status of the ResourceTracker
                         properties:
