--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
@@ -381,6 +381,10 @@ spec:
                         - name
                         - revision
                         type: object
+                      observedGeneration:
+                        description: The generation observed by the application controller.
+                        format: int64
+                        type: integer
                       resourceTracker:
                         description: ResourceTracker record the status of the ResourceTracker
                         properties:
@@ -1657,6 +1661,10 @@ spec:
                         - name
                         - revision
                         type: object
+                      observedGeneration:
+                        description: The generation observed by the application controller.
+                        format: int64
+                        type: integer
                       resourceTracker:
                         description: ResourceTracker record the status of the ResourceTracker
                         properties:
