--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -391,6 +391,10 @@ spec:
                 - name
                 - revision
                 type: object
+              observedGeneration:
+                description: The generation observed by the application controller.
+                format: int64
+                type: integer
               resourceTracker:
                 description: ResourceTracker record the status of the ResourceTracker
                 properties:
@@ -997,6 +1001,10 @@ spec:
                 - name
                 - revision
                 type: object
+              observedGeneration:
+                description: The generation observed by the application controller.
+                format: int64
+                type: integer
               resourceTracker:
                 description: ResourceTracker record the status of the ResourceTracker
                 properties:
