--- a/charts/vela-core/templates/addons/prometheus.yaml
+++ b/charts/vela-core/templates/addons/prometheus.yaml
@@ -5,44 +5,41 @@ data:
     kind: Initializer
     metadata:
       annotations:
-        addons.oam.dev/description: KEDA is a Kubernetes-based Event Driven Autoscaler.
-      name: keda
-      namespace: keda
+        addons.oam.dev/description: Prometheus is an open-source systems monitoring and alerting toolkit
+      name: prometheus
+      namespace: prometheus
     spec:
       appTemplate:
         spec:
           components:
-          - name: keda
+          - name: prometheus
             properties:
               apiVersion: helm.toolkit.fluxcd.io/v2beta1
               kind: HelmRelease
               metadata:
-                name: keda
-                namespace: keda
+                name: prometheus
+                namespace: prometheus
               spec:
                 chart:
                   spec:
-                    chart: keda
-                    interval: 1m
+                    chart: premetheus
+                    interval: 1pm
                     sourceRef:
                       kind: HelmRepository
-                      name: kedacore
-                      namespace: keda
-                    version: 2.3.2
+                      name: prometheus-community
+                      namespace: premetheus
                 interval: 5m
-                values:
-                  replicaCount: 1
             type: raw
-          - name: kedacore
+          - name: prometheus-community
             properties:
               apiVersion: source.toolkit.fluxcd.io/v1beta1
               kind: HelmRepository
               metadata:
-                name: kedacore
-                namespace: keda
+                name: prometheus-community
+                namespace: prometheus
               spec:
                 interval: 1m
-                url: https://kedacore.github.io/charts
+                url: https://prometheus-community.github.io/helm-charts
             type: raw
         status:
           rollout:
@@ -63,7 +60,7 @@ data:
 kind: ConfigMap
 metadata:
   annotations:
-    addons.oam.dev/description: KEDA is a Kubernetes-based Event Driven Autoscaler.
+    addons.oam.dev/description: Prometheus is an open-source systems monitoring and alerting toolkit
   labels:
-    addons.oam.dev/type: keda
-  name: keda
+    addons.oam.dev/type: prometheus
+  name: prometheus
