--- a/vela-templates/addons/prometheus/initializer.yaml
+++ b/vela-templates/addons/prometheus/initializer.yaml
@@ -2,9 +2,9 @@ apiVersion: core.oam.dev/v1beta1
 kind: Initializer
 metadata:
   annotations:
-    addons.oam.dev/description: "KEDA is a Kubernetes-based Event Driven Autoscaler."
-  name: keda
-  namespace: keda
+    addons.oam.dev/description: "Prometheus is an open-source systems monitoring and alerting toolkit"
+  name: prometheus
+  namespace: prometheus
 spec:
   dependsOn:
     - ref:
