1. add readme 2. gen demo file

--- a/vela-templates/addons/fluxcd/template.yaml
+++ b/vela-templates/addons/fluxcd/template.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   appTemplate:
     spec:
-      components: {{  range .Files  }}
+      components: {{  range .ResourceFiles  }}
       - name: {{ .Name }}
         type: raw
         properties:
