Implement addon mechanism (#1867)
* - add: list/enable/disable an addon.

- add: test addon

- add: full flux addon

- fix: flaky test

* try again

* 1. add readme
2. gen demo file

* fix ci

* change name

* try again

--- a/vela-templates/addons/fluxcd/template.yaml
+++ b/vela-templates/addons/fluxcd/template.yaml
@@ -4,12 +4,12 @@ metadata:
   annotations:
     addons.oam.dev/description: "Flux is a set of continuous and progressive delivery solutions for Kubernetes"
   name: fluxcd
-  namespace: vela-system
+  namespace: flux-system
 spec:
   appTemplate:
     spec:
-      components: {{  range .Files  }}
-      - name: {{ .Name }}
-        type: raw
-        properties:
+      components: {{  range .ResourceFiles  }}
+        - name: {{ .Name }}
+          type: raw
+          properties:
 {{ .Content }} {{ end }}
