--- a/vela-templates/addons/terraform/template.yaml
+++ b/vela-templates/addons/terraform/template.yaml
@@ -6,6 +6,11 @@ metadata:
   name: terraform
   namespace: tc-system
 spec:
+  dependsOn:
+    - ref:
+        apiVersion: core.oam.dev/v1beta1
+        kind: Initializer
+        name: fluxcd
   appTemplate:
     spec:
       components: {{  range .ResourceFiles  }}
