--- a/vela-templates/addons/auto-gen/terraform.yaml
+++ b/vela-templates/addons/auto-gen/terraform.yaml
@@ -27,7 +27,7 @@ spec:
                 sourceRef:
                   kind: GitRepository
                   name: terraform-controller-repo
-                  namespace: flux-system
+                  namespace: tc-system
             interval: 5m
             values:
               replicaCount: 1
@@ -58,5 +58,6 @@ spec:
       apiVersion: core.oam.dev/v1beta1
       kind: Initializer
       name: fluxcd
+      namespace: flux-system
 status:
   observedGeneration: 0
