--- a/vela-templates/addons/terraform/template.yaml
+++ b/vela-templates/addons/terraform/template.yaml
@@ -18,4 +18,4 @@ spec:
         - name: {{ .Name }}
           type: raw
           properties:
-{{ .Content }} {{ end }}
+{{ .Content | indent 12 }} {{ end }}
