Add open-kruise as addon

--- a/vela-templates/addons/kruise/template.yaml
+++ b/vela-templates/addons/kruise/template.yaml
@@ -12,4 +12,4 @@ spec:
         - name: {{ .Name }}
           type: raw
           properties:
-{{ .Content }} {{ end }}
+{{ .Content | indent 12 }} {{ end }}
