add generate namespace. add prometheus as addon add keda as addon

--- a/charts/vela-core/templates/addons/ocm-cluster-manager.yaml
+++ b/charts/vela-core/templates/addons/ocm-cluster-manager.yaml
@@ -434,3 +434,4 @@ metadata:
   labels:
     addons.oam.dev/type: ocm-cluster-manager
   name: ocm-cluster-manager
+  namespace: {{.Values.systemDefinitionNamespace}}
