--- a/vela-templates/addons/auto-gen/kruise.yaml
+++ b/vela-templates/addons/auto-gen/kruise.yaml
@@ -1,3 +1,10 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kruise-system
+spec: {}
+status: {}
+---
 apiVersion: core.oam.dev/v1beta1
 kind: Initializer
 metadata:
