--- a/charts/vela-core/templates/addons/keda.yaml
+++ b/charts/vela-core/templates/addons/keda.yaml
@@ -5,50 +5,44 @@ data:
     kind: Initializer
     metadata:
       annotations:
-        addons.oam.dev/description: Kruise is a Kubernetes extended suite for application automations
-      name: kruise
-      namespace: kruise-system
+        addons.oam.dev/description: KEDA is a Kubernetes-based Event Driven Autoscaler.
+      name: keda
+      namespace: keda
     spec:
       appTemplate:
         spec:
           components:
-          - name: kruise-release
+          - name: keda
             properties:
               apiVersion: helm.toolkit.fluxcd.io/v2beta1
               kind: HelmRelease
               metadata:
-                annotations:
-                  meta.helm.sh/release-name: kruise-release
-                  meta.helm.sh/release-namespace: kruise-system
-                labels:
-                  app.kubernetes.io/managed-by: Helm
-                name: kruise-release
-                namespace: flux-system
+                name: keda
+                namespace: keda
               spec:
                 chart:
                   spec:
-                    chart: ./charts/kruise/v0.9.0
+                    chart: keda
                     interval: 1m
                     sourceRef:
-                      kind: GitRepository
-                      name: kruise-repo
-                      namespace: flux-system
+                      kind: HelmRepository
+                      name: kedacore
+                      namespace: keda
+                    version: 2.3.2
                 interval: 5m
                 values:
                   replicaCount: 1
             type: raw
-          - name: kruise-repo
+          - name: kedacore
             properties:
               apiVersion: source.toolkit.fluxcd.io/v1beta1
-              kind: GitRepository
+              kind: HelmRepository
               metadata:
-                name: kruise-repo
-                namespace: flux-system
+                name: kedacore
+                namespace: keda
               spec:
-                interval: 5m
-                ref:
-                  branch: master
-                url: https://github.com/openkruise/kruise
+                interval: 1m
+                url: https://kedacore.github.io/charts
             type: raw
         status:
           rollout:
@@ -58,13 +52,19 @@ data:
             rollingState: ""
             upgradedReadyReplicas: 0
             upgradedReplicas: 0
+      dependsOn:
+      - ref:
+          apiVersion: core.oam.dev/v1beta1
+          kind: Initializer
+          name: fluxcd
+          namespace: flux-system
     status:
       observedGeneration: 0
 kind: ConfigMap
 metadata:
   annotations:
-    addons.oam.dev/description: Kruise is a Kubernetes extended suite for application automations
+    addons.oam.dev/description: KEDA is a Kubernetes-based Event Driven Autoscaler.
   labels:
-    addons.oam.dev/type: kruise
-  name: kruise
+    addons.oam.dev/type: keda
+  name: keda
   namespace: {{.Values.systemDefinitionNamespace}}
