--- a/vela-templates/addons/auto-gen/prometheus.yaml
+++ b/vela-templates/addons/auto-gen/prometheus.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: tc-system
+  name: prometheus
 spec: {}
 status: {}
 ---
@@ -9,45 +9,41 @@ apiVersion: core.oam.dev/v1beta1
 kind: Initializer
 metadata:
   annotations:
-    addons.oam.dev/description: Terraform Controller is a Kubernetes Controller for Terraform.
-  name: terraform
-  namespace: tc-system
+    addons.oam.dev/description: Prometheus is an open-source systems monitoring and alerting toolkit
+  name: prometheus
+  namespace: prometheus
 spec:
   appTemplate:
     spec:
       components:
-      - name: terraform-controller-release
+      - name: prometheus
         properties:
           apiVersion: helm.toolkit.fluxcd.io/v2beta1
           kind: HelmRelease
           metadata:
-            name: terraform-controller-release
-            namespace: tc-system
+            name: prometheus
+            namespace: prometheus
           spec:
             chart:
               spec:
-                chart: ./chart
-                interval: 1m
+                chart: premetheus
+                interval: 1pm
                 sourceRef:
-                  kind: GitRepository
-                  name: terraform-controller-repo
-                  namespace: tc-system
+                  kind: HelmRepository
+                  name: prometheus-community
+                  namespace: premetheus
             interval: 5m
-            values:
-              replicaCount: 1
         type: raw
-      - name: terraform-controller-repo
+      - name: prometheus-community
         properties:
           apiVersion: source.toolkit.fluxcd.io/v1beta1
-          kind: GitRepository
+          kind: HelmRepository
           metadata:
-            name: terraform-controller-repo
-            namespace: tc-system
+            name: prometheus-community
+            namespace: prometheus
           spec:
-            interval: 5m
-            ref:
-              branch: master
-            url: https://github.com/oam-dev/terraform-controller
+            interval: 1m
+            url: https://prometheus-community.github.io/helm-charts
         type: raw
     status:
       rollout:
