align initializer's namespace to vela-system

--- a/charts/vela-core/templates/addons/fluxcd.yaml
+++ b/charts/vela-core/templates/addons/fluxcd.yaml
@@ -7,7 +7,7 @@ data:
       annotations:
         addons.oam.dev/description: Flux is a set of continuous and progressive delivery solutions for Kubernetes
       name: fluxcd
-      namespace: flux-system
+      namespace: vela-system
     spec:
       appTemplate:
         spec:
@@ -4157,6 +4157,13 @@ data:
                       name: data
                     - emptyDir: {}
                       name: tmp
+            type: raw
+          - name: flux-system
+            properties:
+              apiVersion: v1
+              kind: Namespace
+              metadata:
+                name: flux-system
             type: raw
           - name: allow-egress
             properties:
