--- a/charts/vela-core/templates/addons/kruise.yaml
+++ b/charts/vela-core/templates/addons/kruise.yaml
@@ -7,7 +7,7 @@ data:
       annotations:
         addons.oam.dev/description: Kruise is a Kubernetes extended suite for application automations
       name: kruise
-      namespace: kruise-system
+      namespace: vela-system
     spec:
       appTemplate:
         spec:
@@ -23,7 +23,7 @@ data:
                 labels:
                   app.kubernetes.io/managed-by: Helm
                 name: kruise-release
-                namespace: flux-system
+                namespace: kruise-system
               spec:
                 chart:
                   spec:
@@ -43,12 +43,19 @@ data:
               kind: GitRepository
               metadata:
                 name: kruise-repo
-                namespace: flux-system
+                namespace: kruise-system
               spec:
                 interval: 5m
                 ref:
                   branch: master
                 url: https://github.com/openkruise/kruise
+            type: raw
+          - name: kruise-system
+            properties:
+              apiVersion: v1
+              kind: Namespace
+              metadata:
+                name: kruise-system
             type: raw
         status:
           rollout:
@@ -58,6 +65,12 @@ data:
             rollingState: ""
             upgradedReadyReplicas: 0
             upgradedReplicas: 0
+      dependsOn:
+      - ref:
+          apiVersion: core.oam.dev/v1beta1
+          kind: Initializer
+          name: fluxcd
+          namespace: vela-system
     status:
       observedGeneration: 0
 kind: ConfigMap
