--- a/vela-templates/addons/auto-gen/kruise.yaml
+++ b/vela-templates/addons/auto-gen/kruise.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: kruise-system
+  name: vela-system
 spec: {}
 status: {}
 ---
@@ -11,7 +11,7 @@ metadata:
   annotations:
     addons.oam.dev/description: Kruise is a Kubernetes extended suite for application automations
   name: kruise
-  namespace: kruise-system
+  namespace: vela-system
 spec:
   appTemplate:
     spec:
@@ -27,7 +27,7 @@ spec:
             labels:
               app.kubernetes.io/managed-by: Helm
             name: kruise-release
-            namespace: flux-system
+            namespace: kruise-system
           spec:
             chart:
               spec:
@@ -47,12 +47,19 @@ spec:
           kind: GitRepository
           metadata:
             name: kruise-repo
-            namespace: flux-system
+            namespace: kruise-system
           spec:
             interval: 5m
             ref:
               branch: master
             url: https://github.com/openkruise/kruise
+        type: raw
+      - name: kruise-system
+        properties:
+          apiVersion: v1
+          kind: Namespace
+          metadata:
+            name: kruise-system
         type: raw
     status:
       rollout:
@@ -62,5 +69,11 @@ spec:
         rollingState: ""
         upgradedReadyReplicas: 0
         upgradedReplicas: 0
+  dependsOn:
+  - ref:
+      apiVersion: core.oam.dev/v1beta1
+      kind: Initializer
+      name: fluxcd
+      namespace: vela-system
 status:
   observedGeneration: 0
