--- a/vela-templates/addons/auto-gen/terraform.yaml
+++ b/vela-templates/addons/auto-gen/terraform.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: tc-system
+  name: vela-system
 spec: {}
 status: {}
 ---
@@ -11,11 +11,18 @@ metadata:
   annotations:
     addons.oam.dev/description: Terraform Controller is a Kubernetes Controller for Terraform.
   name: terraform
-  namespace: tc-system
+  namespace: vela-system
 spec:
   appTemplate:
     spec:
       components:
+      - name: tc-system
+        properties:
+          apiVersion: v1
+          kind: Namespace
+          metadata:
+            name: tc-system
+        type: raw
       - name: terraform-controller-release
         properties:
           apiVersion: helm.toolkit.fluxcd.io/v2beta1
@@ -62,6 +69,6 @@ spec:
       apiVersion: core.oam.dev/v1beta1
       kind: Initializer
       name: fluxcd
-      namespace: flux-system
+      namespace: vela-system
 status:
   observedGeneration: 0
