--- a/vela-templates/addons/ocm-cluster-manager/template.yaml
+++ b/vela-templates/addons/ocm-cluster-manager/template.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     addons.oam.dev/description: "ocm-cluster-manager can deploy an OCM hub cluster environment."
   name: ocm-cluster-manager
-  namespace: open-cluster-management
+  namespace: vela-system
 spec:
   appTemplate:
     spec:
