fix terraform namespace

--- a/charts/vela-core/templates/addons/terraform.yaml
+++ b/charts/vela-core/templates/addons/terraform.yaml
@@ -12,12 +12,12 @@ data:
       appTemplate:
         spec:
           components:
-          - name: tc-system
+          - name: terraform-system
             properties:
               apiVersion: v1
               kind: Namespace
               metadata:
-                name: tc-system
+                name: terraform-system
             type: raw
           - name: terraform-controller-release
             properties:
@@ -25,7 +25,7 @@ data:
               kind: HelmRelease
               metadata:
                 name: terraform-controller-release
-                namespace: tc-system
+                namespace: terraform-system
               spec:
                 chart:
                   spec:
@@ -34,7 +34,7 @@ data:
                     sourceRef:
                       kind: GitRepository
                       name: terraform-controller-repo
-                      namespace: tc-system
+                      namespace: terraform-system
                 interval: 5m
                 values:
                   replicaCount: 1
@@ -45,7 +45,7 @@ data:
               kind: GitRepository
               metadata:
                 name: terraform-controller-repo
-                namespace: tc-system
+                namespace: terraform-system
               spec:
                 interval: 5m
                 ref:
