--- a/vela-templates/addons/terraform/resource/tc-rel.yaml
+++ b/vela-templates/addons/terraform/resource/tc-rel.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: terraform-controller-release
-  namespace: tc-system
+  namespace: terraform-system
 spec:
   interval: 5m
   chart:
@@ -11,7 +11,7 @@ spec:
       sourceRef:
         kind: GitRepository
         name: terraform-controller-repo
-        namespace: tc-system
+        namespace: terraform-system
       interval: 1m
   values:
     replicaCount: 1
