--- a/vela-templates/addons/ocm-cluster-manager/resource/operator/operator.yaml
+++ b/vela-templates/addons/ocm-cluster-manager/resource/operator/operator.yaml
@@ -40,7 +40,7 @@ spec:
         - args:
             - /registration-operator
             - hub
-          image: registry.cn-beijing.aliyuncs.com/ocm/registration-operator:latest
+          image: quay.io/open-cluster-management/registration-operator:latest
           imagePullPolicy: IfNotPresent
           livenessProbe:
             httpGet:
