--- a/vela-templates/addons/ocm-cluster-manager/resource/clustermanager/hub.yaml
+++ b/vela-templates/addons/ocm-cluster-manager/resource/clustermanager/hub.yaml
@@ -3,6 +3,6 @@ kind: ClusterManager
 metadata:
   name: cluster-manager-hub
 spec:
-  registrationImagePullSpec: registry.cn-beijing.aliyuncs.com/ocm/registration:latest
-  workImagePullSpec: registry.cn-beijing.aliyuncs.com/ocm/work
-  placementImagePullSpec: registry.cn-beijing.aliyuncs.com/ocm/placement
+  registrationImagePullSpec: quay.io/open-cluster-management/registration
+  workImagePullSpec: quay.io/open-cluster-management/work
+  placementImagePullSpec: quay.io/open-cluster-management/placement
