--- a/charts/vela-core/templates/addons/ocm-cluster-manager.yaml
+++ b/charts/vela-core/templates/addons/ocm-cluster-manager.yaml
@@ -7,7 +7,7 @@ data:
       annotations:
         addons.oam.dev/description: ocm-cluster-manager can deploy an OCM hub cluster environment.
       name: ocm-cluster-manager
-      namespace: open-cluster-management
+      namespace: vela-system
     spec:
       appTemplate:
         spec:
@@ -176,6 +176,17 @@ data:
                 name: cluster-manager-service-account
                 namespace: open-cluster-management
             type: raw
+          - name: cluster-manager-hub
+            properties:
+              apiVersion: operator.open-cluster-management.io/v1
+              kind: ClusterManager
+              metadata:
+                name: cluster-manager-hub
+              spec:
+                placementImagePullSpec: quay.io/open-cluster-management/placement
+                registrationImagePullSpec: quay.io/open-cluster-management/registration
+                workImagePullSpec: quay.io/open-cluster-management/work
+            type: raw
           - name: clustermanagers.operator.open-cluster-management.io
             properties:
               apiVersion: apiextensions.k8s.io/v1
@@ -333,16 +344,12 @@ data:
                 conditions: []
                 storedVersions: []
             type: raw
-          - name: cluster-manager-hub
+          - name: open-cluster-management
             properties:
-              apiVersion: operator.open-cluster-management.io/v1
-              kind: ClusterManager
+              apiVersion: v1
+              kind: Namespace
               metadata:
-                name: cluster-manager-hub
-              spec:
-                placementImagePullSpec: registry.cn-beijing.aliyuncs.com/ocm/placement
-                registrationImagePullSpec: registry.cn-beijing.aliyuncs.com/ocm/registration:latest
-                workImagePullSpec: registry.cn-beijing.aliyuncs.com/ocm/work
+                name: open-cluster-management
             type: raw
           - name: cluster-manager-controller
             properties:
@@ -388,7 +395,7 @@ data:
                     - args:
                       - /registration-operator
                       - hub
-                      image: registry.cn-beijing.aliyuncs.com/ocm/registration-operator:latest
+                      image: quay.io/open-cluster-management/registration-operator:latest
                       imagePullPolicy: IfNotPresent
                       livenessProbe:
                         httpGet:
