--- a/charts/vela-core/templates/addons/terraform.yaml
+++ b/charts/vela-core/templates/addons/terraform.yaml
@@ -7,18 +7,25 @@ data:
       annotations:
         addons.oam.dev/description: Terraform Controller is a Kubernetes Controller for Terraform.
       name: terraform
-      namespace: tc-system
+      namespace: vela-system
     spec:
       appTemplate:
         spec:
           components:
+          - name: terraform-system
+            properties:
+              apiVersion: v1
+              kind: Namespace
+              metadata:
+                name: terraform-system
+            type: raw
           - name: terraform-controller-release
             properties:
               apiVersion: helm.toolkit.fluxcd.io/v2beta1
               kind: HelmRelease
               metadata:
                 name: terraform-controller-release
-                namespace: tc-system
+                namespace: terraform-system
               spec:
                 chart:
                   spec:
@@ -27,7 +34,7 @@ data:
                     sourceRef:
                       kind: GitRepository
                       name: terraform-controller-repo
-                      namespace: tc-system
+                      namespace: terraform-system
                 interval: 5m
                 values:
                   replicaCount: 1
@@ -38,7 +45,7 @@ data:
               kind: GitRepository
               metadata:
                 name: terraform-controller-repo
-                namespace: tc-system
+                namespace: terraform-system
               spec:
                 interval: 5m
                 ref:
@@ -58,7 +65,7 @@ data:
           apiVersion: core.oam.dev/v1beta1
           kind: Initializer
           name: fluxcd
-          namespace: flux-system
+          namespace: vela-system
     status:
       observedGeneration: 0
 kind: ConfigMap
