--- a/vela-templates/addons/auto-gen/kruise.yaml
+++ b/vela-templates/addons/auto-gen/kruise.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: kruise-system
+  name: vela-system
 spec: {}
 status: {}
 ---
@@ -11,7 +11,7 @@ metadata:
   annotations:
     addons.oam.dev/description: Kruise is a Kubernetes extended suite for application automations
   name: kruise
-  namespace: kruise-system
+  namespace: vela-system
 spec:
   appTemplate:
     spec:
@@ -62,5 +62,11 @@ spec:
         rollingState: ""
         upgradedReadyReplicas: 0
         upgradedReplicas: 0
+  dependsOn:
+  - ref:
+      apiVersion: core.oam.dev/v1beta1
+      kind: Initializer
+      name: fluxcd
+      namespace: vela-system
 status:
   observedGeneration: 0
