--- a/vela-templates/addons/auto-gen/terraform.yaml
+++ b/vela-templates/addons/auto-gen/terraform.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: tc-system
+  name: vela-system
 spec: {}
 status: {}
 ---
@@ -11,18 +11,25 @@ metadata:
   annotations:
     addons.oam.dev/description: Terraform Controller is a Kubernetes Controller for Terraform.
   name: terraform
-  namespace: tc-system
+  namespace: vela-system
 spec:
   appTemplate:
     spec:
       components:
+      - name: terraform-system
+        properties:
+          apiVersion: v1
+          kind: Namespace
+          metadata:
+            name: terraform-system
+        type: raw
       - name: terraform-controller-release
         properties:
           apiVersion: helm.toolkit.fluxcd.io/v2beta1
           kind: HelmRelease
           metadata:
             name: terraform-controller-release
-            namespace: tc-system
+            namespace: terraform-system
           spec:
             chart:
               spec:
@@ -31,7 +38,7 @@ spec:
                 sourceRef:
                   kind: GitRepository
                   name: terraform-controller-repo
-                  namespace: tc-system
+                  namespace: terraform-system
             interval: 5m
             values:
               replicaCount: 1
@@ -42,7 +49,7 @@ spec:
           kind: GitRepository
           metadata:
             name: terraform-controller-repo
-            namespace: tc-system
+            namespace: terraform-system
           spec:
             interval: 5m
             ref:
@@ -62,6 +69,6 @@ spec:
       apiVersion: core.oam.dev/v1beta1
       kind: Initializer
       name: fluxcd
-      namespace: flux-system
+      namespace: vela-system
 status:
   observedGeneration: 0
