--- a/charts/vela-core/templates/addons/keda.yaml
+++ b/charts/vela-core/templates/addons/keda.yaml
@@ -7,7 +7,7 @@ data:
       annotations:
         addons.oam.dev/description: KEDA is a Kubernetes-based Event Driven Autoscaler.
       name: keda
-      namespace: keda
+      namespace: vela-system
     spec:
       appTemplate:
         spec:
@@ -57,7 +57,7 @@ data:
           apiVersion: core.oam.dev/v1beta1
           kind: Initializer
           name: fluxcd
-          namespace: flux-system
+          namespace: vela-system
     status:
       observedGeneration: 0
 kind: ConfigMap
