--- a/vela-templates/addons/auto-gen/keda.yaml
+++ b/vela-templates/addons/auto-gen/keda.yaml
@@ -1,17 +1,10 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: keda
-spec: {}
-status: {}
----
 apiVersion: core.oam.dev/v1beta1
 kind: Initializer
 metadata:
   annotations:
     addons.oam.dev/description: KEDA is a Kubernetes-based Event Driven Autoscaler.
   name: keda
-  namespace: keda
+  namespace: vela-system
 spec:
   appTemplate:
     spec:
@@ -61,6 +54,6 @@ spec:
       apiVersion: core.oam.dev/v1beta1
       kind: Initializer
       name: fluxcd
-      namespace: flux-system
+      namespace: vela-system
 status:
   observedGeneration: 0
