--- a/vela-templates/addons/auto-gen/prometheus.yaml
+++ b/vela-templates/addons/auto-gen/prometheus.yaml
@@ -1,17 +1,10 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: prometheus
-spec: {}
-status: {}
----
 apiVersion: core.oam.dev/v1beta1
 kind: Initializer
 metadata:
   annotations:
     addons.oam.dev/description: Prometheus is an open-source systems monitoring and alerting toolkit
   name: prometheus
-  namespace: prometheus
+  namespace: vela-system
 spec:
   appTemplate:
     spec:
@@ -58,6 +51,6 @@ spec:
       apiVersion: core.oam.dev/v1beta1
       kind: Initializer
       name: fluxcd
-      namespace: flux-system
+      namespace: vela-system
 status:
   observedGeneration: 0
