--- a/vela-templates/addons/ocm-cluster-manager/template.yaml
+++ b/vela-templates/addons/ocm-cluster-manager/template.yaml
@@ -8,7 +8,13 @@ metadata:
 spec:
   appTemplate:
     spec:
-      components: {{  range .ResourceFiles  }}
+      components:
+{{  range .ResourceFiles  }}
+        - name: {{ .Name }}
+          type: raw
+          properties:
+{{ .Content | indent 12 }} {{ end }}
+{{  range .DefinitionFiles  }}
         - name: {{ .Name }}
           type: raw
           properties:
