--- a/vela-templates/addons/prometheus/template.yaml
+++ b/vela-templates/addons/prometheus/template.yaml
@@ -4,17 +4,23 @@ metadata:
   annotations:
     addons.oam.dev/description: "Prometheus is an open-source systems monitoring and alerting toolkit"
   name: prometheus
-  namespace: prometheus
+  namespace: vela-system
 spec:
   dependsOn:
     - ref:
         apiVersion: core.oam.dev/v1beta1
         kind: Initializer
         name: fluxcd
-        namespace: flux-system
+        namespace: vela-system
   appTemplate:
     spec:
-      components: {{  range .ResourceFiles  }}
+      components:
+{{  range .ResourceFiles  }}
+        - name: {{ .Name }}
+          type: raw
+          properties:
+{{ .Content | indent 12 }} {{ end }}
+{{  range .DefinitionFiles  }}
         - name: {{ .Name }}
           type: raw
           properties:
